# tpmp-gr11b-lab4-redmi-note-10

./: CMakeLists.txt  README.md  music_salon_db.db
.github/workflows/: build.yml  ci.yml
includes/auth/: Authentication.h
includes/database/: Database.h
includes/models/: Author.h  CompactDisc.h  MusicalWork.h  Performer.h  StockOperation.h  User.h
includes/ui/: ConsoleUI.h
includes/utils/: DateUtils.h  InputUtils.h
src/: main.cpp
src/auth/: Authentication.cpp
src/database/: Database.cpp  Database_stubs.cpp
src/models/: Author.cpp  CompactDisc.cpp  MusicalWork.cpp  Performer.cpp  StockOperation.cpp  User.cpp
src/ui/: ConsoleUI.cpp  ConsoleUI_stubs.cpp
src/utils/: InputUtils.cpp
tests/auth/: TestAuthentication.cpp
tests/database/: TestDatabase.cpp
tests/mock/: MockDatabase.h
tests/models/: TestCompactDisc.cpp
